--- a/css/global.css
+++ b/css/global.css
@@ -19,6 +19,7 @@ body {
     font-family: "Public Sans", sans-serif;
     font-size: 1.125rem;
     color: var(--n-grayish-blue);
+    overflow-x: hidden;
 }
 
 img {
