--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,7 @@
     display: inline-block;
     padding: 12px 0;
     position: relative;
+    transition: color 0.16s;
 }
 
 .header-menu a::after {
@@ -25,7 +26,7 @@
     position: absolute;
     left: 0;
     bottom: -20px;
-    transition:0.12s;
+    transition: height 0.16s;
 }
 
 .header-menu a:hover::after {
