--- a/css/articles.css
+++ b/css/articles.css
@@ -21,7 +21,8 @@
 }
 
 .article-item {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-rows: 1fr 1fr;
     background: var(--n-white);
     border-radius: 8px;
@@ -34,10 +35,12 @@
 }
 
 .item-image {
+    height: 200px;
     overflow: hidden;
 }
 
 .item-image img {
+    width: 100%;
     height: 100%;
     object-fit: cover;
     transition: 0.3s;
@@ -72,4 +75,31 @@
 .item-content p {
     font-size: 0.94rem;
     line-height: 1.4;
+}
+
+@media (max-width: 980px) {
+    .articles {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    .articles-items {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    .articles {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
+    .articles h2 {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .articles-items {
+        grid-template-columns: 1fr;
+    }
 }
