--- a/css/introducao.css
+++ b/css/introducao.css
@@ -31,10 +31,58 @@
     max-width: 52vw;
     position: absolute;
     top:85px;
-    right: -100px;
+    right: -110px;
     overflow: hidden
 }
 
 .introducao-mockup img {
    transform: translateY(-80px);
+}
+
+@media (max-width: 780px) {
+    .introducao-bg{
+        background: var(--n-very-light-gray)
+        url('../images/bg-intro-mobile.svg') no-repeat;
+        background-size: cover;
+        background-position-x: center;
+        background-position-y: -220px;
+    }
+
+    .introducao {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: start;
+    }
+
+    .introducao-content {
+        margin: -80px 0 36px 0;
+    }
+
+    .introducao-mockup {
+        max-width: 460px;
+        position: initial;
+    }
+
+    .introducao-mockup img {
+        transform: translateY(-120px);
+    }
+
+    .introducao-content h1,
+    .introducao-content p {
+        max-width: initial;
+    }
+}
+
+@media (max-width: 480px) {
+    .introducao {
+        text-align: center;
+    }
+
+    .introducao-content h1 {
+        font-size: 2.2rem;
+    }
+    .introducao-content p {
+        font-size: 1rem;
+    }
 }
