--- a/css/global.css
+++ b/css/global.css
@@ -20,6 +20,7 @@ body {
     font-size: 1.125rem;
     color: var(--n-grayish-blue);
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 img {
